add null handling for primitive getter, optimized the dynamic mapper by caching static mappers

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
-better caching and handling of mapper
-	1 - cache all setters
-	2 - on fear each match the columns
-benchmark
+Cache FielMapper by column ConcurrentMap? CopyOnWrite?
+Refactor all builder sutff into FielMappingFactory
+clean up factory builder/factory
+asm instantiator
+hibernate benchmark
+test different strategy for adaptive mapper, with cached field mapper might be faster to look those up
+singleton instantiator
