change asm mapper generation to use mapper

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 JdbcMapper
- - asm static mapper
+ - asm static mapper exception handling
+ - better test for asm vs non asm
+ - Flight record to compare pure jdbc with static
  - enum support
  - custom mapping support
  - inner object support
